<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".loginFragment.MajorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/chooseMajor"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/math"
            android:textSize="20sp"
            android:textColor="@drawable/selector_text"
            android:textStyle="bold"
            android:background="@drawable/selector_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/coding"
            android:layout_marginStart="10dp"
            android:textColor="@drawable/selector_text"
            android:textStyle="bold"
            android:background="@drawable/selector_button"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/korean"
            android:textSize="20sp"
            android:textColor="@drawable/selector_text"
            android:textStyle="bold"
            android:background="@drawable/selector_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/science"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textColor="@drawable/selector_text"
            android:textStyle="bold"
            android:background="@drawable/selector_button"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/english"
            android:textSize="20sp"
            android:textColor="@drawable/selector_text"
            android:textStyle="bold"
            android:background="@drawable/selector_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/society"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textColor="@drawable/selector_text"
            android:textStyle="bold"
            android:background="@drawable/selector_button"/>


    </LinearLayout>



</LinearLayout>