<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpFragment.EmailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insertEmail"
            android:layout_marginStart="20dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="@color/gray"/>
        
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hintEmail"
            android:importantForAutofill="no" />
    </LinearLayout>


</LinearLayout>